# Quantum-Toolbox

./: .gitignore  CMakeLists.txt  README.md  converg.txt  converg2.txt  discord.kdev4  import.txt  jet.pal  main code old und co.cpp  main.cpp  opt-func.cpp  opt-func.h  parametrized_state.cpp  parametrized_state.h  plot.plt  plot_conv.plt  qr_complex.cpp  qr_complex.h  qubit.cpp  qubit.h  quit_import.cpp  quit_import.h  quit_jarlskog.cpp  quit_jarlskog.h  quit_toolbox.cpp  quit_toolbox.cpp.orig  quit_toolbox.cpp~  quit_toolbox.h  quit_unitary.cpp  quit_unitary.h  randstate.cpp  randstate.h  scriptlets  snippets.txt  spectral.pal  su2.cpp  su2.h  test.bla
.kdev4/: discord.kdev4
plots/: QD_RE_QC_2_2_2_3.eps  QD_RE_QC_2_2_2_3.tex  QD_RE_QC_2_2_2_8.tex  ampdamp.tex  ampdampbob.tex  bitflip.tex  dephasing.tex  entcorr.tex  rw_distribution.tex  s1.tex  sudden.tex
